# UCM

./: .gitignore
10_Contenedores/microservicios/: .gitignore
10_Contenedores/microservicios/00.Entregable/: 1.Justificación_Arquitectura_Propuesta.md  2.Chuck-MicroService_Swagger.yaml
10_Contenedores/microservicios/1.microservice_architecture/environment/: clean_env.sh  curl_10_times.sh  docker-compose.yml  quick_start.sh  start.sh
10_Contenedores/microservicios/3.Tarea/: README.md
10_Contenedores/microservicios/3.Tarea/chuck-says-query/: Dockerfile  app.py
10_Contenedores/microservicios/3.Tarea/chuck-says-query/k8s_resources/: chuck-says-api-config.yaml  chuck-says-api-deployment.yaml  chuck-says-api-service.yaml  chuck-says-deployment.yaml
1_Programacion_Avanzada_Python/Ejercicio_propuesto_POO/geometria/: enunciado.md  main.py  pyproject.toml
1_Programacion_Avanzada_Python/Ejercicio_propuesto_POO/geometria/geom2d/: punto.py  vector.py
1_Programacion_Avanzada_Python/Ejercicio_propuesto_POO/geometria/tests/: test_metodos_clase_punto.py
1_Programacion_Avanzada_Python/Ejercicio_propuesto_Sketch/: Ej1.py
1_Programacion_Avanzada_Python/Ejercicio_propuesto_numpy_1/: enunciado.html  ith.py
1_Programacion_Avanzada_Python/Ejercicio_propuesto_numpy_2/: enunciado.html  zonal_stat.py
1_Programacion_Avanzada_Python/Ejercicio_propuesto_numpy_2/datos/: valores.txt  zonas.txt
